# syndra-news-curator

./: .env.example  .gitignore  LICENSE  README.md  Syndra_Proposal.docx  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  bookmarks.py  categories.py  health.py  news.py
backend/app/core/: config.py  database.py  security.py  seed_categories.py
backend/app/models/: __init__.py  article.py  base.py  bookmark.py  category.py  user.py
backend/app/schemas/: article.py  bookmark.py  category.py  user.py
backend/app/services/: aggregator.py  bias_analyzer.py  nlp_engine.py  worker.py
backend/app/services/adapters/: __init__.py  gnews_adapter.py  guardian_adapter.py  mock_data.py  newsapi_adapter.py  rss_adapter.py
backend/tests/: test_adapters.py  test_aggregator.py  test_bias_analyzer.py  test_health.py  test_news_api.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ArticleCard.tsx  AuthModal.tsx  CategoryNav.tsx  ErrorBoundary.tsx  Pagination.tsx
frontend/src/components/layout/: Header.tsx  (+1 more)
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: use-articles.ts  use-bookmarks.ts  use-categories.ts  use-click-outside.ts  use-health.ts
frontend/src/lib/: api.ts  i18n.ts  sanitize.ts
frontend/src/pages/: ArticleDetailPage.tsx  HomePage.tsx  NewsFeedPage.tsx  NotFoundPage.tsx
